# internet-research-assistant

./: .gitignore  README.md  pyproject.toml
src/: api_manager.py  async_util.py  dummy_search_controller.py  file_io.py  main.py  openai_api.py  searchContoller.py  search_controller.py  search_processor.py  topic_summarizer.py
src/data/: cache.py  research_results.py  search_history.py  topic_results.py  url.py  url_category.py  web_content.py
src/frontend/: web_server.py
src/frontend/static/: style.css
src/frontend/static/js/: script.js  slider.js
src/frontend/templates/: base.html  error.html  homepage.html  search.html  searchbar.html
src/frontend/test/: browserTest.py  test_ColorCoding.py  test_HasSearchText.py  test_LargeSearch.py  test_LessThanTenResults.py  test_LinkInNewTab.py  test_NoResults.py  test_SearchFromSelection.py  test_ThreeResultsSection.py
src/nlp/: basic_summarizer.py  input_parser.py
src/outputs/: a.txt  bing_results.json  models.json
src/searches/: ResearchResults.py  Search.py  SearchHistory.py  SearchProcessor.py  SearchResults.py  TopicResults.py  URL.py  URLCategory.py  bing_search.py  chatGPT.py  google_search.py  openai_search.py  webpage_downloader.py
src/web_search/: bing_search.py  google_search.py  request_throttler.py  search_aggregator.py  webpage_downloader.py
test/: download_and_summarize.py  test_chat_gpt.py  test_input_parser.py  test_research_result.py  test_search_controller.py  test_search_engines.py  test_search_processor.py  test_summarizer.py  test_topic_summarizer.py  test_webpage_downloader.py
