[tool.poetry]
name = "internet-research-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.26.5"
google = "^3.0.0"
ipython = "^8.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
