[tool.poetry]
name = "internet-research-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.26.5"
google = "^3.0.0"
azure-cognitiveservices-search-customsearch = "^0.3.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
spacy = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
