[tool.poetry]
name = "internet-research-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "frontend", from = "src" }]

[tool.poetry.scripts]
webserver = "frontend.web_server:start"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.26.5"
google = "^3.0.0"
azure-cognitiveservices-search-customsearch = "^0.3.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
flask = "^2.2.3"
nltk = "^3.7"
regex = "^2022.4.24"
spacy = "^3.5.0"
pytest = "^7.2.2"
google-api-python-client = "2.84.0"
[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
